# CPP_Seriz

./: .clang-tidy  .gitignore  Build-Release-ms.bat  CITATION.cff  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Tests_Build-Release-ms.bat
App/: CMakeLists.txt  main.cpp
SerializationLib/: CMakeLists.txt
SerializationLib/include/Serialization/: Converters.hpp  SerializationExports.hpp  Seriz.hpp
SerializationLib/src/Serialization/: Seriz.cpp
cmake/: BuildConfig.cmake  Compilers.cmake
